fix rejection from dashboard - shifts button logic into the button-group directive so that it's scoped to the task. could do similar with the footer buttons, but that's not a priority.

--- a/Workflow/App_Plugins/Workflow/Backoffice/css/action-dialog.scss
+++ b/Workflow/App_Plugins/Workflow/Backoffice/css/action-dialog.scss
@@ -2,6 +2,7 @@
 
     textarea, label {
         width: 100%;
+        display:block;
     }
 
     &--task-list {
